# key_manager

./: README.md
key_manager/: CMakeLists.txt
key_manager/meili_proto/: build.sh
key_manager/meili_proto/datacloak/server/: key_manager.proto  key_manager_grpc.pb.go
key_manager/protos/: key_manager.proto
key_manager/src/: log.cpp  log.h  main.cpp  server.cpp  server.h  utils.cpp  utils.h
key_manager/src/crypto/: crypto.cpp  crypto.h
key_manager_client/: go.mod  main.go  test.key  test.pub
key_manager_client/client/: client.go
key_manager_client/meili_proto/: build.bat
key_manager_client/meili_proto/datacloak/server/: key_manager.pb.go  key_manager.proto  key_manager_grpc.pb.go
